# overengineered_hkt

./: Cargo.toml  README.md
.cargo/: config.toml
overengineered_hkt/: Cargo.toml
overengineered_hkt/src/: lib.rs  macros.rs  marker_classification.rs  transmute.rs  utils.rs
overengineered_hkt/src/hkt/: array.rs  bind.rs  boxed.rs  dependent_wrapper.rs  fn_lifetime_exp.rs  future.rs  id.rs  iter.rs  mod.rs  nullary.rs  one_of.rs  option.rs  reference.rs  result.rs  slice.rs  sync.rs  traits.rs  vec.rs
overengineered_hkt/src/hkt/laws/: applicative.rs  functor.rs  mod.rs  monad.rs
overengineered_hkts/: Cargo.toml
overengineered_hkts/src/: lib.rs  macros.rs  marker_classification.rs  transmute.rs
overengineered_hkts/src/hkt/: bind.rs  boxed.rs  extensions.rs  free.rs  id.rs  iter.rs  mod.rs  one_of.rs  option.rs  reference.rs  result.rs  slice.rs  traits.rs  tuple.rs  vec.rs
overengineered_hkts/src/hkt/laws/: applicative.rs  monad.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
