[package]
name = "overengineered_hkts"
version = "0.1.0"
edition = "2024"
description = "Expiremental crate of higher-kinded types integrated with lifetimes and matching function types and optional cloning and supporting no_std."
keywords = ["hkt", "transmute", "one_of", "no_std", "match"]
categories = ["rust-patterns", "data-structures"]
repository = "https://github.com/ArsenalAlex108/overengineered_hkt"
license = "MIT OR Apache-2.0"

[features]
unstable = []
transmute = []
no-std = []
laws = []

[lints.clippy]

[badges]
maintenance = { status = "expiremental" }

[dependencies]
cast_trait_object = "0.1.4"
composing = "0.2.0"
const-random = "0.1.18"
derive_more = { version = "2.0.1", default-features = false, features = ["from", "into", "as_ref", "deref", "deref_mut"] }
dyn-clone = "1.0.20"
either = "1.15.0"
futures = "0.3.31"
intertrait = "0.2.2"
naan = "0.1.32"
negative = "0.1.2"
negative-impl = "0.1.6"
ref-cast = "1.0.25"
static_assertions = "1.1.0"
tap = "1.0.1"
triomphe = "0.1.15"
try-specialize = "0.1.2"
typeid = "1.0.3"
# proc_macros are local dependencies for now
# proc_macros = { path = "../proc_macros" }

